@@ -332,10 +332,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |1|
+          1
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -343,10 +343,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |2|
+          2
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -354,10 +354,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |3|
+          3
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -365,10 +365,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |4|
+          4
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -376,10 +376,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |5|
+          5
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -387,10 +387,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |6|
+          6
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -398,10 +398,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |7|
+          7
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -409,10 +409,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |8|
+          8
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -420,10 +420,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |9|
+          9
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -431,10 +431,10 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |0|
+          0
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
     </table>
@@ -1173,10 +1173,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |1|
+          1
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1184,10 +1184,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |2|
+          2
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1195,10 +1195,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |3|
+          3
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1206,10 +1206,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |4|
+          4
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1217,10 +1217,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |5|
+          5
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1228,10 +1228,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |6|
+          6
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1239,10 +1239,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |7|
+          7
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1250,10 +1250,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |8|
+          8
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1261,10 +1261,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |9|
+          9
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
       <tr>
@@ -1272,10 +1272,10 @@ Or do actions on corners
            Mod-1 
         </td>
         <td align="center" nowrap>
-          |0|
+          0
         </td>
         <td style="color:#0000ff" nowrap>
-          Bind or jump to a slot
+          Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
     </table>
@@ -1625,7 +1625,7 @@ Or do corners actions
           
         </td>
         <td align="center" nowrap>
-          Clfswm  motion
+          Motion
         </td>
         <td style="color:#0000ff" nowrap>
           Grab text
