@@ -33,16 +33,16 @@ Main mode keys:
   Shift                Escape          Unhide all hidden windows into the current child
   Mod-1                T               Switch to editing mode
   Control              Less            Switch to editing mode
-  Mod-1                |1|             Bind or jump to a slot
-  Mod-1                |2|             Bind or jump to a slot
-  Mod-1                |3|             Bind or jump to a slot
-  Mod-1                |4|             Bind or jump to a slot
-  Mod-1                |5|             Bind or jump to a slot
-  Mod-1                |6|             Bind or jump to a slot
-  Mod-1                |7|             Bind or jump to a slot
-  Mod-1                |8|             Bind or jump to a slot
-  Mod-1                |9|             Bind or jump to a slot
-  Mod-1                |0|             Bind or jump to a slot
+  Mod-1                1               Bind or jump to a slot (a frame or a window)
+  Mod-1                2               Bind or jump to a slot (a frame or a window)
+  Mod-1                3               Bind or jump to a slot (a frame or a window)
+  Mod-1                4               Bind or jump to a slot (a frame or a window)
+  Mod-1                5               Bind or jump to a slot (a frame or a window)
+  Mod-1                6               Bind or jump to a slot (a frame or a window)
+  Mod-1                7               Bind or jump to a slot (a frame or a window)
+  Mod-1                8               Bind or jump to a slot (a frame or a window)
+  Mod-1                9               Bind or jump to a slot (a frame or a window)
+  Mod-1                0               Bind or jump to a slot (a frame or a window)
 
 
 Mouse buttons actions in main mode:
@@ -118,16 +118,16 @@ Second mode keys:
                        H               start an xclock
   Shift                Menu            Show all frames info windows
   Control              Menu            Show/Hide the root frame
-  Mod-1                |1|             Bind or jump to a slot
-  Mod-1                |2|             Bind or jump to a slot
-  Mod-1                |3|             Bind or jump to a slot
-  Mod-1                |4|             Bind or jump to a slot
-  Mod-1                |5|             Bind or jump to a slot
-  Mod-1                |6|             Bind or jump to a slot
-  Mod-1                |7|             Bind or jump to a slot
-  Mod-1                |8|             Bind or jump to a slot
-  Mod-1                |9|             Bind or jump to a slot
-  Mod-1                |0|             Bind or jump to a slot
+  Mod-1                1               Bind or jump to a slot (a frame or a window)
+  Mod-1                2               Bind or jump to a slot (a frame or a window)
+  Mod-1                3               Bind or jump to a slot (a frame or a window)
+  Mod-1                4               Bind or jump to a slot (a frame or a window)
+  Mod-1                5               Bind or jump to a slot (a frame or a window)
+  Mod-1                6               Bind or jump to a slot (a frame or a window)
+  Mod-1                7               Bind or jump to a slot (a frame or a window)
+  Mod-1                8               Bind or jump to a slot (a frame or a window)
+  Mod-1                9               Bind or jump to a slot (a frame or a window)
+  Mod-1                0               Bind or jump to a slot (a frame or a window)
 
 
 Mouse buttons actions in second mode:
@@ -171,7 +171,7 @@ Mouse buttons actions in info mode:
                        2               Leave the info mode
                        4               Move one line up
                        5               Move one line down
-                       Clfswm::motion   Grab text
+                       Motion          Grab text
 
 
 
