@@ -1,3 +1,8 @@
+2009-06-19  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-autodoc.lisp (produce-doc, produce-doc-html): Minor
+	number key cleanup.
+
 2009-06-18  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/config.lisp (get-fullscreen-size):  One pixel adjustment
